# Fretboard

./: README.md  StringInstruments.ipynb  TestNotebook.ipynb  UserGuide.txt  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  StringInstruments_Working-checkpoint.ipynb  TestNotebook-checkpoint.ipynb
fretboard/: chords.py  instrument-Copy1.py  instrument.py  keys.py  notes.txt
fretboard/.ipynb_checkpoints/: chords-checkpoint.py  instrument-checkpoint.py  notes-checkpoint.txt
