Fretboard
name = "fretboard_alexanderdouglass"
version = "0.0.1"
authors = [
  { name="Alexander Douglass", email="douglass.alex@gmail.com" },
]
description = "A package for fretboard vizualization"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alexanderdouglass/fretboard"
"Bug Tracker" = "https://github.com/alexanderdouglass/fretboard/issues"